@@ -653,6 +653,9 @@ main (int argc, char *argv[])
 	  }
     }
 
+  if (verbosity > 1)
+    grub_env_set ("debug", "all");
+
   /* Obtain DEST_DEV.  */
   if (optind >= argc)
     {
